# surfpool-examples

./: .gitignore  README.md
anchor/: README.md
anchor/dexs_example/: Cargo.toml  prelude.rs
anchor/dexs_example/src/: README.md  args.rs  constants.rs  main.rs  mod.rs  prelude.rs  utils.rs
anchor/dexs_example/src/cmd/: mod.rs  rpc_helper.rs  simulate.rs  simulate_dflow.rs  simulate_jup.rs  simulate_lifi.rs  simulate_solfi.rs
anchor/dexs_example/src/instructions/: byreal_clmm.rs  dflow_agg.rs  dflow_agg_v4.rs  fluxbeam.rs  goosefx.rs  jupiter.rs  jupiter_perpetuals.rs  lifinity_v2.rs  manifest_trade.rs  meteora_damm_v2.rs  meteora_dbc.rs  mod.rs  obric_v2.rs  okx_router.rs  openbook_v2.rs  orca_whirlpools.rs  pancake_swap_v3.rs  phoenix.rs  pumpfun_amm.rs  raydium.rs  raydium_launchpad.rs  sanctum.rs  sanctum_router.rs  saros.rs  solfi.rs  stabble.rs  stable_swap.rs  tessera_v.rs  woofi.rs  zerofi.rs
anchor/hello-pyth/: Anchor.toml  txtx.yml
anchor/hello-pyth/programs/hello-pyth/: Cargo.toml
anchor/hello-pyth/programs/hello-pyth/src/: lib.rs
anchor/hello-pyth/programs/hello-pyth/src/state/: mod.rs  triangular_arbitrage.rs
anchor/hello-pyth/programs/hello-pyth/src/tests/: mod.rs
anchor/hello-pyth/programs/hello-pyth/src/tests/fixtures/: arbitrage.json  no_arbitrage.json  snapshot.json
anchor/hello-pyth/runbooks/: README.md
anchor/hello-pyth/runbooks/check-arbitrage/: main.tx  signers.localnet.tx
anchor/hello-pyth/runbooks/deployment/: main.tx
anchor/price-feed/: Anchor.toml  txtx.yml
anchor/price-feed/programs/price-feed/: Cargo.toml
anchor/price-feed/programs/price-feed/src/: lib.rs
anchor/price-feed/runbooks/: README.md
anchor/price-feed/runbooks/deployment/: main.tx  subgraphs.localnet.tx
anchor/price-feed/runbooks/fetch-price/: main.tx  signers.mainnet.tx
anchor/price-feed/tests/: price-feed.ts
anchor/simple-pda/: Anchor.toml  txtx.yml
anchor/simple-pda/programs/simple-pda/: Cargo.toml
anchor/simple-pda/programs/simple-pda/src/: lib.rs
anchor/simple-pda/runbooks/: README.md
anchor/simple-pda/runbooks/call/: main.tx  signers.localnet.tx  signers.mainnet.tx
anchor/simple-pda/runbooks/deployment/: main.tx  signers.mainnet.tx  subgraphs.localnet.tx
anchor/simple-pda/tests/: index.ts
anchor/split_token_transfer/: Anchor.toml  README.md  send-tokens.tx
anchor/split_token_transfer/programs/split_token_transfer/src/: lib.rs
pinocchio/: README.md
pinocchio/swap/: README.md
pinocchio/swap/client/: package.json  tsconfig.json
pinocchio/swap/client/src/: arb_dlmm_test.ts  arb_pump_test.ts  utils.ts
pinocchio/swap/program/: txtx.yml
pinocchio/swap/program/runbooks/: README.md
pinocchio/swap/program/src/: entrypoint.rs  lib.rs
pinocchio/swap/program/src/dex/: mod.rs
pinocchio/swap/program/src/instruction/: mod.rs
pinocchio/swap/program/src/state/: utils.rs
split_token_transfer/: Anchor.toml  send-tokens.tx  txtx.yml
split_token_transfer/programs/split_token_transfer/: Cargo.toml
split_token_transfer/programs/split_token_transfer/src/instructions/: split_token_transfer.rs
split_token_transfer/runbooks/: README.md
split_token_transfer/runbooks/deployment/: main.tx  subgraphs.localnet.tx
surfnet_cheatcode_examples/: Cargo.toml  README.md
surfnet_cheatcode_examples/cheatcodes/: get_profile_results.rs  mod.rs  profile_transaction.rs  set_account.rs  set_token_account.rs
surfnet_cheatcode_examples/src/: lib.rs  main.rs  prelude.rs
swap/: README.md  gen-client.sh  key_to58.py  swap_program-keypair.json
swap/client/: .solitarc.js
swap/client/idl/: swap_program.json
swap/client/src/: arb_dlmm_test.ts  arb_pump_test.ts  utils.ts
swap/program/: Cargo.toml  txtx.yml
swap/program/runbooks/deployment/: main.tx
swap/program/src/: error.rs
swap/program/src/dex/dlmm/: errors.rs
swap/program/src/dex/pump_amm/: errors.rs
swap/program/src/instruction/: arb.rs
(+7 files in other folders)
