[package]
name = "surfnet_cheatcodes_examples"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bs58 = "0.5.1"
reqwest =  { version = "0.12.19", features = ["blocking", "json"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
solana-account-decoder = "2.2.7"
tokio = { version = "1.45.1", features = ["full"] }
