[package]
name = "hello-pyth"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_pyth"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
pyth-solana-receiver-sdk = "1.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dev-dependencies]
litesvm = "0.8.1"
surfpool-types = "0.12.0-a1"
solana-clock = "3.0.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.0"
solana-pubkey = "3.0.0"
solana-transaction = "3.0.0"
serde_json = "1.0"
